# LCG

./: CMakeLists.txt  LICENSE  README.md  compile_flags.txt  lcg.c  lcg.h
include/: lcg.h
src/: lcg.c  main.c
